WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80512
[BlackBerry] Fix warnings in CookieMap
https://bugs.webkit.org/show_bug.cgi?id=80512
Summary
[BlackBerry] Fix warnings in CookieMap
Konrad Piascik
Reported
2012-03-07 07:12:53 PST
[BlackBerry] Fix warnings in CookieMap
Attachments
Patch
(2.91 KB, patch)
2012-03-07 07:13 PST
,
Konrad Piascik
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Konrad Piascik
Comment 1
2012-03-07 07:13:58 PST
Created
attachment 130622
[details]
Patch
Rob Buis
Comment 2
2012-03-07 07:17:46 PST
Comment on
attachment 130622
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2012-03-07 09:39:03 PST
Comment on
attachment 130622
[details]
Patch Rejecting
attachment 130622
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: webkit-commit-queue/Source/WebKit/chromium/webkit --revision 124511 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 48>At revision 124511. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output:
http://queues.webkit.org/results/11851164
WebKit Review Bot
Comment 4
2012-03-07 11:01:48 PST
Comment on
attachment 130622
[details]
Patch Clearing flags on attachment: 130622 Committed
r110071
: <
http://trac.webkit.org/changeset/110071
>
WebKit Review Bot
Comment 5
2012-03-07 11:01:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug