[BlackBerry] Fix warnings in CookieMap https://bugs.webkit.org/show_bug.cgi?id=80512

Patch by Konrad Piascik <kpiascik@rim.com> on 2012-03-07
Reviewed by Rob Buis.

No new tests. No behavioural changes.

* platform/blackberry/CookieMap.cpp:
(WebCore::CookieMap::addOrReplaceCookie):
(WebCore::CookieMap::removeCookie):
(WebCore::CookieMap::getAllCookies):
(WebCore::CookieMap::updateOldestCookie):

Canonical link: https://commits.webkit.org/97688@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110071 268f45cc-cd09-0410-ab3c-d52691b4dbfc